tests/ui/type/type-check/point-at-inference-4.stderr
error[E0061]: this method takes 2 arguments but 1 argument was supplied
  --> $DIR/point-at-inference-4.rs:12:7
   |
LL |     s.infer(0i32);
   |       ^^^^^------ an argument is missing
   |
note: associated function defined here
  --> $DIR/point-at-inference-4.rs:4:8
   |
LL |     fn infer(&self, a: A, b: B) {}
   |        ^^^^^        ----  ----
help: provide the argument
   |
LL |     s.infer(0i32, /* b */);
   |            ~~~~~~~~~~~~~~~

error[E0308]: mismatched types
  --> $DIR/point-at-inference-4.rs:16:24
   |
LL |     let t: S<u32, _> = s;
   |            ---------   ^ expected `S<u32, _>`, found `S<i32, _>`
   |            |
   |            expected due to this
   |
   = note: expected struct `S<u32, _>`
              found struct `S<i32, _>`

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0061, E0308.
For more information about an error, try `rustc --explain E0061`.
